fix(argo-workflows): Add unhealthyPodEvictionPolicy to workflow controller PDB
Signed-off-by: Clément FLEURY <clement.fleury@owkin.com>

--- a/charts/argo-workflows/templates/controller/workflow-controller-deployment-pdb.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-deployment-pdb.yaml
@@ -14,6 +14,9 @@ spec:
   {{- else }}
   minAvailable: 0
   {{- end }}
+  {{- if .Values.controller.pdb.unhealthyPodEvictionPolicy }}
+  unhealthyPodEvictionPolicy: {{ .Values.controller.pdb.unhealthyPodEvictionPolicy }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "argo-workflows.selectorLabels" (dict "context" . "name" .Values.controller.name) | nindent 6 }}
