--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.5.12
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.42.7
+version: 0.42.8
 icon: https://argo-workflows.readthedocs.io/en/stable/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -18,3 +18,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Support lifecycle and terminationGracePeriodSeconds for server
+    - kind: added
+      description: explicitly set unhealthyPodEvictionPolicy to IfHealthyBudget in controller PDB
