--- a/charts/argo-rollouts/templates/controller/configmap.yaml
+++ b/charts/argo-rollouts/templates/controller/configmap.yaml
@@ -8,8 +8,10 @@ metadata:
     {{- include "argo-rollouts.labels" . | nindent 4 }}
 data:
   {{- with .Values.controller.metricProviderPlugins }}
-    {{- toYaml . | nindent 2 }}
+  metricProviderPlugins: |-
+    {{- toYaml . | nindent 4 }}
   {{- end }}
   {{- with .Values.controller.trafficRouterPlugins }}
-    {{- toYaml . | nindent 2 }}
+  trafficRouterPlugins: |-
+    {{- toYaml . | nindent 4 }}
   {{- end }}
