Fix checksum/cmd-params and checksum/cm to prevent unnecessary diffs
Signed-off-by: Patrick <94605888+pgmgb@users.noreply.github.com>

--- a/charts/argo-events/templates/argo-events-controller/deployment.yaml
+++ b/charts/argo-events/templates/argo-events-controller/deployment.yaml
@@ -15,7 +15,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/argo-events-controller/config.yaml") . | sha256sum }}
+        checksum/config: {{ (include (print $.Template.BasePath "/argo-events-controller/config.yaml") . | fromYaml).data | toYaml | sha256sum }}
         {{- with (mergeOverwrite (deepCopy .Values.global.podAnnotations) .Values.controller.podAnnotations) }}
         {{- range $key, $value := . }}
         {{ $key }}: {{ $value | quote }}
