Added changes to chart.yaml
Signed-off-by: Patrick <94605888+pgmgb@users.noreply.github.com>

--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -19,4 +19,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: events-webhook Service using non-default port
+      description: Fix checksum/cmd-params and checksum/cm to prevent unnecessary diffs
