--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -210,14 +210,14 @@ controller:
   # -- Configures 3rd party metric providers for controller
   ## Ref: https://argo-rollouts.readthedocs.io/en/stable/analysis/plugins/
   metricProviderPlugins: {}
-    # metricProviderPlugins: |-
+    # metricProviderPlugins:
     #   - name: "argoproj-labs/sample-prometheus" # name of the plugin, it must match the name required by the plugin so that it can find its configuration
     #     location: "file://./my-custom-plugin" # supports http(s):// urls and file://
 
   # -- Configures 3rd party traffic router plugins for controller
   ## Ref: https://argo-rollouts.readthedocs.io/en/stable/features/traffic-management/plugins/
   trafficRouterPlugins: {}
-    # trafficRouterPlugins: |-
+    # trafficRouterPlugins:
     #   - name: "argoproj-labs/sample-nginx" # name of the plugin, it must match the name required by the plugin so it can find it's configuration
     #     location: "file://./my-custom-plugin" # supports http(s):// urls and file://
 
