--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -102,6 +102,9 @@ jobs:
           du -sh charts/argo-workflows
           echo "Disk usage of charts/argo-workflows/templates..."
           du -sh charts/argo-workflows/templates
+          echo "Largest files in charts/argo-workflows..."
+          du -a /charts/argo-workflows/ | sort -n -r | head -n 5
+          echo "---"
           echo "contents of charts/argo-workflows..."
           ls -lah charts/argo-workflows
           echo "contents of charts/argo-workflows/templates..."
