--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -103,7 +103,7 @@ jobs:
           echo "Disk usage of charts/argo-workflows/templates..."
           du -sh charts/argo-workflows/templates
           echo "Largest files in charts/argo-workflows..."
-          du -a /charts/argo-workflows/ | sort -n -r | head -n 5
+          du -a charts/argo-workflows/ | sort -n -r | head -n 5
           echo "---"
           echo "contents of charts/argo-workflows..."
           ls -lah charts/argo-workflows
