--- a/charts/argo-cd/templates/event-reporter/statefulset.yaml
+++ b/charts/argo-cd/templates/event-reporter/statefulset.yaml
@@ -91,6 +91,12 @@ spec:
                 name: argocd-cmd-params-cm
                 key: server.rootpath
                 optional: true
+          - name: CODEFRESH_RUNTIME_VERSION
+            valueFrom:
+              configMapKeyRef:
+                name: codefresh-cm
+                key: version
+                optional: true
           - name: CODEFRESH_URL
             valueFrom:
               configMapKeyRef:
