--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -7,14 +7,14 @@ version: 0.44.1
 icon: https://argo-workflows.readthedocs.io/en/stable/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
-  - https://github.com/argoproj/argo-workflows
+- https://github.com/argoproj/argo-workflows
 maintainers:
-  - name: argoproj
-    url: https://argoproj.github.io/
+- name: argoproj
+  url: https://argoproj.github.io/
 annotations:
   artifacthub.io/signKey: |
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Remove excessive RBAC privileges from workflow-role.
+      description: Change BASE_HREF to ARGO_BASE_HREF.
