--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.12.3-2024.11.14-d7a4c4e7e
+appVersion: v2.12.3-2024.12.3-a26fd084e
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 7.4.7-7-cap-2.12.3-2024.11.14-d7a4c4e7e
+version: 7.4.7-7-cap-2.12.3-2024.12.3-a26fd084e
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -26,5 +26,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: fixed
-      description: argo-cd updated to v2.12.3-2024.11.14-d7a4c4e7e with repeated resources fix in repo-server for apps with directory type source
+    - kind: feature
+      description: argo-cd updated to v2.12.3-2024.12.3-a26fd084e with multi-source applications extended support in event-reporter
