chore: add includePath
to allow `Renovate` to update image tags in values.yaml

Signed-off-by: mikutas <23391543+mikutas@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,7 @@
   "includePaths": [
     "**/charts/argo-workflows/Chart.yaml",
     "**/charts/argo-cd/Chart.yaml",
+    "**/charts/argo-cd/values.yaml",
     "**/charts/argo-events/Chart.yaml",
     "**/charts/argo-rollouts/Chart.yaml",
     "**/charts/argocd-image-updater/Chart.yaml",
