upgrade chart to v2.12.3-2024.12.17-4d75d35f4 release
Signed-off-by: reggie-k <regina.voloshin@codefresh.io>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: v2.12.3-2024.12.3-a26fd084e
+appVersion: v2.12.3-2024.12.17-4d75d35f4
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: argo-cd updated to v2.12.3-2024.12.3-a26fd084e with multi-source applications extended support in event-reporter
+      description: argo-cd updated to v2.12.3-2024.12.17-4d75d35f4 with fix for remove changeRevision changeRevisions fields from protobuf for compatibility with OSS cli
