--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: argo-cd updated to v2.12.3-2024.12.20-4dbe2c462 with feature: using sources-server for application version
+      description: argo-cd updated to v2.12.3-2024.12.20-4dbe2c462 using sources-server for application version
